deploy: 2906460d86ca3fd28cd7c368ce456041ca4bcc58

--- a/indexpage.html
+++ b/indexpage.html
@@ -56,7 +56,7 @@
 <td><a href="indexpage.html#global_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#global_*">other</a></td>
-<td>(724 entries)</td>
+<td>(730 entries)</td>
 </tr>
 <tr>
 <td>Notation Index</td>
@@ -120,7 +120,7 @@
 <td><a href="indexpage.html#binder_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#binder_*">other</a></td>
-<td>(461 entries)</td>
+<td>(463 entries)</td>
 </tr>
 <tr>
 <td>Module Index</td>
@@ -344,7 +344,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(5 entries)</td>
+<td>(6 entries)</td>
 </tr>
 <tr>
 <td>Definition Index</td>
@@ -376,7 +376,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#definition_*">other</a></td>
-<td>(74 entries)</td>
+<td>(77 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
@@ -571,6 +571,7 @@
 <a href="Domains.Kleene.html#D:8">D:8</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Dcpo.html#D:8">D:8</a> [binder, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <br/><br/><a id="global_E"></a><h2>E </h2>
+<a href="Domains.Preamble.html#eq_ind">eq_ind</a> [definition, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Preamble.html#extract">extract</a> [definition, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Preamble.html#extract_prop">extract_prop</a> [definition, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Poset.html#Extrema">Extrema</a> [section, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
@@ -726,7 +727,9 @@
 <a href="Domains.Lift.html#i0:36">i0:36</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#i0:37">i0:37</a> [binder, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Path.html#i:10">i:10</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#i:23">i:23</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.UNat.html#I:24">I:24</a> [binder, in <a href="Domains.UNat.html">Domains.UNat</a>]<br/>
+<a href="Domains.Path.html#i:24">i:24</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Preamble.html#i:25">i:25</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.ILift.html#i:28">i:28</a> [binder, in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
 <a href="Domains.ILift.html#i:31">i:31</a> [binder, in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
@@ -914,6 +917,7 @@
 <a href="Domains.Sierpinski.html">Sierpinski</a> [library]<br/>
 <a href="Domains.DcpoProduct.html#snd_continous">snd_continous</a> [lemma, in <a href="Domains.DcpoProduct.html">Domains.DcpoProduct</a>]<br/>
 <a href="Domains.Lift.html#sval">sval</a> [abbreviation, in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Preamble.html#sval">sval</a> [abbreviation, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Kleene.html#S:38">S:38</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Kleene.html#S:43">S:43</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
 <a href="Domains.Kleene.html#S:45">S:45</a> [binder, in <a href="Domains.Kleene.html">Domains.Kleene</a>]<br/>
@@ -1028,9 +1032,9 @@
 <a href="Domains.Dcpo.html#x:22">x:22</a> [binder, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Sierpinski.html#x:23">x:23</a> [binder, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Poset.html#x:23">x:23</a> [binder, in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
-<a href="Domains.Path.html#x:23">x:23</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Preamble.html#x:23">x:23</a> [binder, in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.ILift.html#x:25">x:25</a> [binder, in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
+<a href="Domains.Path.html#x:25">x:25</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Dcpo.html#x:25">x:25</a> [binder, in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.UNat.html#x:26">x:26</a> [binder, in <a href="Domains.UNat.html">Domains.UNat</a>]<br/>
 <a href="Domains.ILift.html#x:26">x:26</a> [binder, in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
@@ -1155,6 +1159,8 @@
 <a href="Domains.Sierpinski.html#72c97f28cd24a881b73005ab099f7468">Σ_ltT</a> [lemma, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Sierpinski.html#a0721939e2045067b7728f50816f03bc">Σ_ltR</a> [lemma, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Sierpinski.html#be8c5147e42876137cad9ba9e86306f8">Σ_lt</a> [definition, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
+<a href="Domains.Path.html#65af07627a72c2eee81cc7be50e3fec8">Σ_line</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#19de0005507164fbebfd2ed7a5df6857">Σ_fun</a> [definition, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Path.html#ef26ae4298a9a0ef9ca97f80f9ba5b5f">ψ:21</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Sierpinski.html#6e332a617b7a94a63f8523db7232c691">ϕ:19</a> [binder, in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Path.html#2fa927698f05924ab30f4b064f7779df">ϕ:20</a> [binder, in <a href="Domains.Path.html">Domains.Path</a>]<br/>
@@ -1383,7 +1389,9 @@
 <a href="Domains.Lift.html#i0:36">i0:36</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Lift.html#i0:37">i0:37</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
 <a href="Domains.Path.html#i:10">i:10</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#i:23">i:23</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.UNat.html#I:24">I:24</a> [in <a href="Domains.UNat.html">Domains.UNat</a>]<br/>
+<a href="Domains.Path.html#i:24">i:24</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Preamble.html#i:25">i:25</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.ILift.html#i:28">i:28</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
 <a href="Domains.ILift.html#i:31">i:31</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
@@ -1544,9 +1552,9 @@
 <a href="Domains.Dcpo.html#x:22">x:22</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.Sierpinski.html#x:23">x:23</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Poset.html#x:23">x:23</a> [in <a href="Domains.Poset.html">Domains.Poset</a>]<br/>
-<a href="Domains.Path.html#x:23">x:23</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Preamble.html#x:23">x:23</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.ILift.html#x:25">x:25</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
+<a href="Domains.Path.html#x:25">x:25</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <a href="Domains.Dcpo.html#x:25">x:25</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <a href="Domains.UNat.html#x:26">x:26</a> [in <a href="Domains.UNat.html">Domains.UNat</a>]<br/>
 <a href="Domains.ILift.html#x:26">x:26</a> [in <a href="Domains.ILift.html">Domains.ILift</a>]<br/>
@@ -1904,6 +1912,7 @@
 <a href="Domains.Preamble.html#propext">propext</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <br/><br/><a id="abbreviation_S"></a><h2>S </h2>
 <a href="Domains.Lift.html#sval">sval</a> [in <a href="Domains.Lift.html">Domains.Lift</a>]<br/>
+<a href="Domains.Preamble.html#sval">sval</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <br/><br/><hr/>
 <h1>Definition Index</h1>
 <a id="definition_A"></a><h2>A </h2>
@@ -1929,6 +1938,7 @@
 <a href="Domains.DcpoExponential.html#dlub_fun">dlub_fun</a> [in <a href="Domains.DcpoExponential.html">Domains.DcpoExponential</a>]<br/>
 <a href="Domains.Dcpo.html#dlub_bundled">dlub_bundled</a> [in <a href="Domains.Dcpo.html">Domains.Dcpo</a>]<br/>
 <br/><br/><a id="definition_E"></a><h2>E </h2>
+<a href="Domains.Preamble.html#eq_ind">eq_ind</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Preamble.html#extract">extract</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <a href="Domains.Preamble.html#extract_prop">extract_prop</a> [in <a href="Domains.Preamble.html">Domains.Preamble</a>]<br/>
 <br/><br/><a id="definition_F"></a><h2>F </h2>
@@ -1994,6 +2004,8 @@
 <br/><br/><a id="definition_*"></a><h2>other </h2>
 <a href="Domains.Sierpinski.html#e15c0eb40e61adefe95778c26e7840f6">Σ</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
 <a href="Domains.Sierpinski.html#be8c5147e42876137cad9ba9e86306f8">Σ_lt</a> [in <a href="Domains.Sierpinski.html">Domains.Sierpinski</a>]<br/>
+<a href="Domains.Path.html#65af07627a72c2eee81cc7be50e3fec8">Σ_line</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
+<a href="Domains.Path.html#19de0005507164fbebfd2ed7a5df6857">Σ_fun</a> [in <a href="Domains.Path.html">Domains.Path</a>]<br/>
 <br/><br/><hr/>
 <h1>Record Index</h1>
 <a id="record_F"></a><h2>F </h2>
@@ -2035,7 +2047,7 @@
 <td><a href="indexpage.html#global_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#global_*">other</a></td>
-<td>(724 entries)</td>
+<td>(730 entries)</td>
 </tr>
 <tr>
 <td>Notation Index</td>
@@ -2099,7 +2111,7 @@
 <td><a href="indexpage.html#binder_Z">Z</a></td>
 <td>_</td>
 <td><a href="indexpage.html#binder_*">other</a></td>
-<td>(461 entries)</td>
+<td>(463 entries)</td>
 </tr>
 <tr>
 <td>Module Index</td>
@@ -2323,7 +2335,7 @@
 <td>Z</td>
 <td>_</td>
 <td>other</td>
-<td>(5 entries)</td>
+<td>(6 entries)</td>
 </tr>
 <tr>
 <td>Definition Index</td>
@@ -2355,7 +2367,7 @@
 <td>Z</td>
 <td>_</td>
 <td><a href="indexpage.html#definition_*">other</a></td>
-<td>(74 entries)</td>
+<td>(77 entries)</td>
 </tr>
 <tr>
 <td>Record Index</td>
