deploy: b45e28ae4d8ac8d77ae9de8bdfd6236d22997820

--- a/toc.html
+++ b/toc.html
@@ -39,6 +39,8 @@
 <h2><a href="Domains.ClosedModality.html">Domains.ClosedModality</a></h2>
 <h2><a href="Domains.Kleene.html">Domains.Kleene</a></h2>
 <h2><a href="Domains.ILift.html">Domains.ILift</a></h2>
+<h2><a href="Domains.Skeleton.html">Domains.Skeleton</a></h2>
+<h2><a href="Domains.WF.html">Domains.WF</a></h2>
 </div>
 </div>
 <div id="footer">
